--- a/gb/24/10/3/n14343327.md
+++ b/gb/24/10/3/n14343327.md
@@ -52,7 +52,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/2/n14342794.md#1">台风来袭 北北基桃被疑未达标也放假</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/7/n10620856.md#1" target="_blank">历经磨难的学者——吴门三大右派</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/22/n10801600.md#1" target="_blank">潜伏在中华民国和台湾的中共间谍（2）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/5/n11500416.md#1" target="_blank">滴水穿石 乌克蘭夫妇的坚韧诚心感化民众</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
